# learn-rust

genetic/: Cargo.toml
genetic/src/: main.rs
kiss/: Cargo.toml  README.md
kiss/src/: main.rs
life/: Cargo.toml
life/src/: main.rs
rustboot/: .gitignore  Cargo.toml  Makefile  README.md
rustboot/libs/bump_allocator/: Cargo.toml
rustboot/libs/bump_allocator/src/: lib.rs
rustboot/src/: lib.rs  main.rs  vga_buffer.rs
rustboot/src/arch/x86_64/: boot.asm  linker.ld  long_mode_init.asm
rustboot/src/memory/: area_frame_allocator.rs  mod.rs
rustboot/src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
triangle/: Cargo.toml
triangle/src/: main.rs
