[package]
name = "blog_os"
version = "0.1.0"
authors = ["SunDoge <384813529@qq.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "0.1.4"
volatile = "0.1.0"
spin = "0.4.5"
multiboot2 = "0.1.0"
bitflags = "0.7.0"
# x86_64 = "0.1.0"

[dependencies.x86]
default-features = false
version = "0.8.0"

# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort"

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort"